--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
+    "font-awesome": "^4.7.0",
     "formik": "^2.4.5",
     "modern-normalize": "^2.0.0",
     "prettier": "^3.2.5",
