--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.29.0",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "font-awesome": "^4.7.0",
